Collapsed navbar fixed
Collapsed navbar fixed. Added dropdown menu for About.

--- a/index.css
+++ b/index.css
@@ -9,6 +9,10 @@ body {
     background: #ffffff;
 }
 
+.navbar-collapse, .dropdown-menu {
+    text-align: center !important;
+}
+
 a {
     color: #015249 !important;
 }
